--- a/web/src/styles/_colors.scss
+++ b/web/src/styles/_colors.scss
@@ -1,10 +1,32 @@
 $black: #000000;
-$gray: #808080;
+$gray: #737A80;
 $white: #FFFFFF;
 
 $alizarin-crimson: #ED2939;
 $carmine: #960018;
-$robins-egg-blue: #00C3E3;
 $cod-gray: #161616;
 $ice-cold: #96F5F5;
 $mine-shaft: #2D2D2D;
+$robins-egg-blue: #00C3E3;
+$tuna: #383A3D;
+
+$joycon-button-bg-color: #111111;
+
+// Joycons colors
+$joycon-gray-bg-color: #828282;
+$joycon-neon-red-bg-color: #FF3C28;
+$joycon-neon-blue-bg-color: #00C3E3;
+$joycon-neon-yellow-bg-color: #E6FF00;
+$joycon-splatoon-left-bg-color: #1EDC00;
+$joycon-splatoon-right-bg-color: #FF3278;
+$joycon-red-bg-color: #E10F00;
+$joycon-blue-bg-color: #4655F5;
+$joycon-halloween-left-bg-color: #B400E6;
+$joycon-halloween-right-bg-color: #FAA005;
+$joycon-pokemon-lets-go-pikachu-bg-color: #FFDC00;
+$joycon-pokemon-lets-go-eevee-bg-color: #C88C32;
+$joycon-nintendo-labo-bg-color: #D7AA73;
+$joycon-animal-crossing-left-bg-color: #82FF96;
+$joycon-animal-crossing-right-bg-color: #96F5F5;
+$joycon-fornite-wildcat-left-bg-color: #FFCC00;
+$joycon-fornite-wildcat-right-bg-color: #0084FF;
